--- a/demo-creative-agency-2.html
+++ b/demo-creative-agency-2.html
@@ -326,15 +326,15 @@
 					<div class="custom-grid-1">
 						<div class="container">
 							<div class="row">
-								<div class="col-6 col-lg-3">
+								<div class="col-6 col-lg-3 bg-color-secondary--300">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
 											<img class="p-relative" src="img/demos/creative-agency-2/services/services-1.jpg" loading="lazy" alt="">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
-											<div class="ps-4">
+											<div class="ps-4 bg-color--tertiary--200">
 												<div class="divider divider-small divider-small-lg mt-0 mb-3 text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="0">
-													<hr class="bg-color-secondary--300">
+													<hr class="bg-color-tertiary--200">
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
@@ -346,7 +346,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col-lg-3">
+								<div class="col-6 col-lg-3 bg-color-secondary--200">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
 											<img class="p-relative" src="img/demos/creative-agency-2/services/services-2.jpg" loading="lazy" alt="">
@@ -354,7 +354,7 @@
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
 												<div class="divider divider-small divider-small-lg mt-0 mb-3 text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="100">
-													<hr class="bg-color-secondary--200">
+													<hr class="bg-color-tertiary--200">
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
@@ -365,7 +365,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col-lg-3">
+								<div class="col-6 col-lg-3 bg-color-secondary--100">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
 											<img class="p-relative" src="img/demos/creative-agency-2/services/services-3.jpg" loading="lazy" alt="">
@@ -373,7 +373,7 @@
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
 												<div class="divider divider-small divider-small-lg mt-0 mb-3 text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
-													<hr class="bg-color-secondary--100">
+													<hr class="bg-color-tertiary--200">
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
@@ -384,7 +384,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col-lg-3">
+								<div class="col-6 col-lg-3 bg-color-secondary">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
 											<img class="p-relative" src="img/demos/creative-agency-2/services/services-4.jpg" loading="lazy" alt="">
@@ -392,7 +392,7 @@
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
 												<div class="divider divider-small divider-small-lg mt-0 mb-3 text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
-													<hr class="bg-color-secondary">
+													<hr class="bg-color-tertiary--200">
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
@@ -403,7 +403,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col-lg-3">
+								<div class="col-6 col-lg-3 bg-color-secondary">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
 											<img class="p-relative" src="img/demos/creative-agency-2/services/services-5.jpg" loading="lazy" alt="">
@@ -411,7 +411,7 @@
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
 												<div class="divider divider-small divider-small-lg mt-0 mb-3 text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="0">
-													<hr class="bg-color-secondary--300">
+													<hr class="bg-color-tertiary--200">
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
@@ -423,7 +423,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col-lg-3">
+								<div class="col-6 col-lg-3 bg-color-secondary--100">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
 											<img class="p-relative" src="img/demos/creative-agency-2/services/services-6.jpg" loading="lazy" alt="">
@@ -431,7 +431,7 @@
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
 												<div class="divider divider-small divider-small-lg mt-0 mb-3 text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="100">
-													<hr class="bg-color-secondary--200">
+													<hr class="bg-color-tertiary--200">
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
@@ -442,7 +442,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col-lg-3">
+								<div class="col-6 col-lg-3 bg-color-secondary--200">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
 											<img class="p-relative" src="img/demos/creative-agency-2/services/services-7.jpg" loading="lazy" alt="">
@@ -450,7 +450,7 @@
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
 												<div class="divider divider-small divider-small-lg mt-0 mb-3 text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
-													<hr class="bg-color-secondary--100">
+													<hr class="bg-color-tertiary--200">
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
@@ -461,7 +461,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col-lg-3">
+								<div class="col-6 col-lg-3 bg-color-secondary--300">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
 											<img class="p-relative" src="img/demos/creative-agency-2/services/services-8.jpg" loading="lazy" alt="">
@@ -469,7 +469,7 @@
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
 												<div class="divider divider-small divider-small-lg mt-0 mb-3 text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
-													<hr class="bg-color-secondary">
+													<hr class="bg-color-tertiary--200">
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
