--- a/demo-creative-agency-2.html
+++ b/demo-creative-agency-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 
 		<!-- Basic -->
@@ -338,7 +338,7 @@
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
-														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-primary--300"
+														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200"
 														data-appear-animation="maskUp" data-appear-animation-delay="50">Direito<br>Urbanístico</h3>
 													</a>
 												</div>
@@ -358,7 +358,7 @@
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
-														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-primary--300" data-appear-animation="maskUp" data-appear-animation-delay="150">Propriedade<br>Intelectual</h3>
+														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200" data-appear-animation="maskUp" data-appear-animation-delay="150">Propriedade<br>Intelectual</h3>
 													</a>
 												</div>
 											</div>										
@@ -377,7 +377,7 @@
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
-														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-primary--300" data-appear-animation="maskUp" data-appear-animation-delay="250">Recuperação<br>de Crédito</h3>
+														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200" data-appear-animation="maskUp" data-appear-animation-delay="250">Recuperação<br>de Crédito</h3>
 													</a>
 												</div>
 											</div>										
@@ -396,7 +396,7 @@
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
-														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-primary--300" data-appear-animation="maskUp" data-appear-animation-delay="350">Direito<br>Imobiliário</h3>
+														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200" data-appear-animation="maskUp" data-appear-animation-delay="350">Direito<br>Imobiliário</h3>
 													</a>
 												</div>
 											</div>										
@@ -415,7 +415,7 @@
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
-														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-primary--300"
+														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200"
 														data-appear-animation="maskUp" data-appear-animation-delay="50">Tributário</h3>
 													</a>
 												</div>
@@ -435,7 +435,7 @@
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
-														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-primary--300" data-appear-animation="maskUp" data-appear-animation-delay="150">Agronegócio</h3>
+														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200" data-appear-animation="maskUp" data-appear-animation-delay="150">Agronegócio</h3>
 													</a>
 												</div>
 											</div>										
@@ -454,7 +454,7 @@
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
-														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-primary--300" data-appear-animation="maskUp" data-appear-animation-delay="250">Empresarial<br>e Societário</h3>
+														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200" data-appear-animation="maskUp" data-appear-animation-delay="250">Empresarial<br>e Societário</h3>
 													</a>
 												</div>
 											</div>										
@@ -473,7 +473,7 @@
 												</div>
 												<div class="overflow-hidden">
 													<a href="#" class="stretched-link text-decoration-none">
-														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-primary--300" data-appear-animation="maskUp" data-appear-animation-delay="350">Família<br>e Sucessão</h3>
+														<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200" data-appear-animation="maskUp" data-appear-animation-delay="350">Família<br>e Sucessão</h3>
 													</a>
 												</div>   
 											</div>										
