--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -310,7 +310,7 @@
                     <div class="container custom-padding-top-1 custom-padding-bottom-1 px-lg-5 bg-light">
                         <div class="row px-lg-3">
                             <div class="col">
-                                <p class="text-4-5 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-4">Combinando a tradição das gerações anteriores com a inovação dos profissionais de hoje, nosso escritório oferece soluções jurídicas ágeis e eficazes, sempre alinhadas às demandas contemporâneas e comprometidas com a excelência na defesa dos interesses de nossos clientes. </p>
+                                <p class="text-4-5 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-4">Atuamos de forma estratégica e especializada nas áreas de Direito Médico, Direito Urbanístico e Propriedade Intelectual. Nossa equipe oferece soluções precisas para atender às necessidades jurídicas específicas de nossos clientes, com foco em resultados e excelência. </p>
                             </div>
                         </div>
                         <div class="row px-lg-3">
