--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+	<head>
+
 		<!-- Basic -->
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Demo Creative Agency 2 | Porto - Multipurpose Website Template</title>	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<title>Demo Creative Agency 2 | Porto - Multipurpose Website Template</title>	
+
 		<meta name="keywords" content="WebSite Template" />
 		<meta name="description" content="Porto - Multipurpose Website Template">
-		<meta name="author" content="okler.net">
+		<meta name="author" content="okler.net">
+
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+
 		<!-- Mobile Metas -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-		<!-- Web Fonts  -->		<link id="googleFonts" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap" rel="stylesheet" type="text/css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
+
+		<!-- Web Fonts  -->
+		<link id="googleFonts" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap" rel="stylesheet" type="text/css">
+
 		<!-- Vendor CSS -->
-		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">		<link rel="stylesheet" href="vendor/animate/animate.compat.css">		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
+		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
+		<link rel="stylesheet" href="vendor/animate/animate.compat.css">
+		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
+		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
+		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
+		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
+
 		<!-- Theme CSS -->
 		<link rel="stylesheet" href="css/theme.css">
 		<link rel="stylesheet" href="css/theme-elements.css">
 		<link rel="stylesheet" href="css/theme-blog.css">
 		<link rel="stylesheet" href="css/theme-shop.css">
 
-		<!-- Demo CSS -->		<link rel="stylesheet" href="css/demos/demo-creative-agency-2.css">
-		<!-- Skin CSS -->		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-creative-agency-2.css">
+		<!-- Demo CSS -->
+		<link rel="stylesheet" href="css/demos/demo-creative-agency-2.css">
+
+		<!-- Skin CSS -->
+		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-creative-agency-2.css">
+
 		<!-- Theme Custom CSS -->
 		<link rel="stylesheet" href="css/custom.css">
 
 	</head>
 	<body>
-		<div class="body">
+		<div class="body">
+
 			<header id="header" class="header-transparent" data-plugin-options="{'stickyScrollUp': true, 'stickyEnabled': true, 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': false, 'stickyChangeLogo': true, 'stickyStartAt': 1, 'stickyHeaderContainerHeight': 72}">
 				<div class="header-body border-top-0 bg-quaternary box-shadow-none h-auto">
 					<div class="header-container container p-static">
@@ -38,7 +58,7 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="demo-creative-agency-2.html">
-											<img alt="Porto" width="150" height="40" src="img/demos/creative-agency-2/logo.png">
+											<img alt="Porto" height="40" src="img/demos/creative-agency-2/logo.svg">
 										</a>
 									</div>
 								</div>
@@ -53,22 +73,23 @@
 														<a class="nav-link" href="demo-creative-agency-2.html">Home</a>
 													</li>
 													<li>
-														<a class="nav-link active" href="demo-creative-agency-2-about-us.html">About Us</a>
+														<a class="nav-link active" href="demo-creative-agency-2-about-us.html">Sobre nós</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-creative-agency-2-services.html">Services</a>
+														<a class="nav-link" href="demo-creative-agency-2-services.html">Serviços</a>
 													</li>
 													<li>
-														<a class="nav-link" href="blog-large-image-full-width.html">Blog</a>
+														<a class="nav-link" href="blog-large-image-full-width.html">News</a>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="#">
-															Portfolio
-														</a>
-														<ul class="dropdown-menu">
+														<a class="dropdown-item dropdown-toggle" href="#">Portfolio</a>
+											
+														<ul class="dropdown-menu">
+
 															<li class="dropdown-submenu">
 																<a class="dropdown-item" href="#">Single Project</a>
-																<ul class="dropdown-menu">
+																<ul class="dropdown-menu">
+
 																	<li><a class="dropdown-item" href="portfolio-single-wide-slider.html">Wide Slider</a></li>
 																	<li><a class="dropdown-item" href="portfolio-single-small-slider.html">Small Slider</a></li>
 																	<li><a class="dropdown-item" href="portfolio-single-full-width-slider.html">Full Width Slider</a></li>
@@ -86,7 +107,8 @@
 															</li>
 															<li class="dropdown-submenu">
 																<a class="dropdown-item" href="#">Grid Layouts</a>
-																<ul class="dropdown-menu">
+																<ul class="dropdown-menu">
+
 																	<li><a class="dropdown-item" href="portfolio-grid-1-column.html">1 Column</a></li>
 																	<li><a class="dropdown-item" href="portfolio-grid-2-columns.html">2 Columns</a></li>
 																	<li><a class="dropdown-item" href="portfolio-grid-3-columns.html">3 Columns</a></li>
@@ -101,7 +123,8 @@
 															</li>
 															<li class="dropdown-submenu">
 																<a class="dropdown-item" href="#">Masonry Layouts</a>
-																<ul class="dropdown-menu">
+																<ul class="dropdown-menu">
+
 																	<li><a class="dropdown-item" href="portfolio-masonry-2-columns.html">2 Columns</a></li>
 																	<li><a class="dropdown-item" href="portfolio-masonry-3-columns.html">3 Columns</a></li>
 																	<li><a class="dropdown-item" href="portfolio-masonry-4-columns.html">4 Columns</a></li>
@@ -113,7 +136,8 @@
 															</li>
 															<li class="dropdown-submenu">
 																<a class="dropdown-item" href="#">Sidebar Layouts</a>
-																<ul class="dropdown-menu">
+																<ul class="dropdown-menu">
+
 																	<li><a class="dropdown-item" href="portfolio-sidebar-left.html">Left Sidebar</a></li>
 																	<li><a class="dropdown-item" href="portfolio-sidebar-right.html">Right Sidebar</a></li>
 																	<li><a class="dropdown-item" href="portfolio-sidebar-left-and-right.html">Left and Right Sidebars</a></li>
@@ -122,14 +146,16 @@
 															</li>
 															<li class="dropdown-submenu">
 																<a class="dropdown-item" href="#">Ajax</a>
-																<ul class="dropdown-menu">
+																<ul class="dropdown-menu">
+
 																	<li><a class="dropdown-item" href="portfolio-ajax-page.html">Ajax on Page</a></li>
 																	<li><a class="dropdown-item" href="portfolio-ajax-modal.html">Ajax on Modal</a></li>
 																</ul>
 															</li>
 															<li class="dropdown-submenu">
 																<a class="dropdown-item" href="#">Extra</a>
-																<ul class="dropdown-menu">
+																<ul class="dropdown-menu">
+
 																	<li><a class="dropdown-item" href="portfolio-extra-timeline.html">Timeline</a></li>
 																	<li><a class="dropdown-item" href="portfolio-extra-lightbox.html">Lightbox</a></li>
 																	<li><a class="dropdown-item" href="portfolio-extra-load-more.html">Load More</a></li>
@@ -142,10 +168,13 @@
 														</ul>
 													</li>
 													<li class="dropdown dropdown-mega">
-														<a class="dropdown-item dropdown-toggle" href="elements.html">
-															Elements
+														<a class="dropdown-item dropdown-toggle" href="elements.html">
+
+															Elements
+
 														</a>
-														<ul class="dropdown-menu mt-0">
+														<ul class="dropdown-menu mt-0">
+
 															<li>
 																<div class="dropdown-mega-content container px-2">
 																	<div class="row px-1">
@@ -225,7 +254,7 @@
 												</ul>
 											</nav>
 										</div>
-										<a class="btn btn-primary font-weight-semibold text-3 py-lg-3 btn-gradient text-quaternary anim-hover-translate-top-5px transition-2ms ms-4" href="demo-creative-agency-2-contact-us.html" target="_blank"><span class="px-lg-4 d-block ws-nowrap">Contact Us</span></a>
+										<a class="btn btn-primary font-weight-semibold text-3 py-lg-3 text-light anim-hover-translate-top-5px transition-2ms ms-4" href="demo-creative-agency-2-contact-us.html" target="_blank"><span class="px-lg-4 d-block ws-nowrap">Contate-nos</span></a>
 										<button class="btn header-btn-collapse-nav text-dark" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
 											<i class="fas fa-bars"></i>
 										</button>
@@ -235,11 +264,12 @@
 						</div>
 					</div>
 				</div>
-			</header>
-			<div role="main" class="main">
+			</header>
+
+			<div role="main" class="main">
+
 				<section class="page-header p-relative border-0 bg-quaternary overflow-hidden m-0 p-0">
 				    <div class="custom-hero-bg">
-				        <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
 				            <defs>
 				                <radialGradient id="Gradient1" cx="50%" cy="50%" fx="0.441602%" fy="50%" r=".5">
 				                    <animate attributeName="fx" dur="34s" values="0%;3%;0%" repeatCount="indefinite"></animate>
@@ -258,11 +288,7 @@
 				        <div class="row align-items-center my-5 pt-5 pb-4">
 				            <div class="col text-center my-5 pb-5">
 				                <div class="py-4">
-				                    <ul class="breadcrumb d-flex justify-content-center text-4-5 font-weight-medium mb-2">
-				                        <li><a href="demo-law-firm-2.html" class="text-color-primary text-decoration-none">HOME</a></li>
-				                        <li class="text-color-primary active">ABOUT US</li>
-				                    </ul>
-				                    <h1 class="text-color-light font-weight-bold text-10">About Us</h1>
+				                    <h1 class="text-color-light font-weight-bold text-10">Sobre nós</h1>
 				                </div>
 				            </div>
 				        </div>
@@ -278,7 +304,8 @@
 				            <img src="img/demos/creative-agency-2/svg/arrow-up-light.svg" width="140">
 				        </div>
 				    </div>			
-				</section>
+				</section>
+
                 <div class="custom-page-content p-relative z-index-2">
                     <div class="container custom-padding-top-1 custom-padding-bottom-1 px-lg-5 bg-light">
                         <div class="row px-lg-3">
@@ -290,9 +317,12 @@
                             <div class="col-lg-6 mb-5 mb-lg-0">
                                 <img src="img/demos/creative-agency-2/generic/generic-1.jpg" class="img-fluid custom-border-radius-1" alt="">
                             </div>
-                            <div class="col-lg-6 ps-lg-4">
-                                <p class="text-4 line-height-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum eleifend eros a pharetra. Cras aliquam vestibulum vehicula. Sed sed lectus risus. Vestibulum maximus ac purus in euismod. In venenatis tellus ante, id porta risus semper quis. Aenean vel posuere urna, sit amet placerat massa. Quisque efficitur interdum libero, sed dictum lorem euismod sed.</p>
-                                <p class="text-4 line-height-7">Aenean vel posuere urna, sit amet placerat massa. Quisque efficitur interdum libero, sed dictum lorem euismod sed.</p>
+                            <div class="col-lg-6 ps-lg-4">
+
+                                <p class="text-4 line-height-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum eleifend eros a pharetra. Cras aliquam vestibulum vehicula. Sed sed lectus risus. Vestibulum maximus ac purus in euismod. In venenatis tellus ante, id porta risus semper quis. Aenean vel posuere urna, sit amet placerat massa. Quisque efficitur interdum libero, sed dictum lorem euismod sed.</p>
+
+                                <p class="text-4 line-height-7">Aenean vel posuere urna, sit amet placerat massa. Quisque efficitur interdum libero, sed dictum lorem euismod sed.</p>
+
 								<div class="d-block">
 									<div class="toggle toggle-minimal toggle-dark" data-plugin-toggle>
 										<section class="toggle">
@@ -314,18 +344,23 @@
 											</div>
 										</section>
 									</div>
-								</div>
+								</div>
+
                                 <div class="d-block appear-animation pt-4" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
 									<a href="#" class="btn btn-modern btn-primary text-capitalize text-dark text-3 px-2 py-1 anim-hover-translate-top-5px transition-2ms">Let's Talk <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></a>
-								</div>
+								</div>
+
                             </div>
-                        </div>
+                        </div>
+
                         <div class="row px-lg-3 py-5">
 							<div class="col">
 								<p class="text-4 line-height-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum eleifend eros a pharetra. Cras aliquam vestibulum vehicula. Sed sed lectus risus. Vestibulum maximus ac purus in euismod. In venenatis tellus ante, id porta risus semper quis. Aenean vel posuere urna, sit amet placerat massa. Quisque efficitur interdum libero, sed dictum lorem euismod sed.</p>
 							</div>
-                        </div>
-                        <div class="row px-lg-3">
+                        </div>
+
+                        <div class="row px-lg-3">
+
                             <div class="col-md-6 col-lg-4 mb-4">
                                 <div class="card border-0 border-radius-0 bg-color-dark">
                                     <div class="card-body">
@@ -373,11 +408,15 @@
                                         <p class="text-4-5 line-height-7 text-light pb-0 mt-5 mb-0">Cras a elit sit amet leo accumsan volutpat.</p>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
+                            </div>
+
+                        </div>
+
                     </div>
-				</div>
-			</div>
+				</div>
+
+			</div>
+
 			<footer id="footer" class="p-relative bg-dark border-top-0">		
 				<div class="container pt-5 pb-3">
 					<div class="row py-5">
@@ -488,16 +527,21 @@
 			</footer>
 		</div>
 
-		<!-- Vendor -->		<script src="vendor/plugins/js/plugins.min.js"></script>
+		<!-- Vendor -->
+		<script src="vendor/plugins/js/plugins.min.js"></script>
+
 		<!-- Theme Base, Components and Settings -->
 		<script src="js/theme.js"></script>
 
 		<!-- Demo -->
-		<script src="js/demos/demo-creative-agency-2.js"></script>
+		<script src="js/demos/demo-creative-agency-2.js"></script>
+
 		<!-- Current Page Vendor and Views -->
 		<script src="js/views/view.contact.js"></script>
 
-		<!-- Theme Custom -->		<script src="js/custom.js"></script>
+		<!-- Theme Custom -->
+		<script src="js/custom.js"></script>
+
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
 
