--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -745,7 +745,7 @@
                     <div class="container py-1">
 						<div class="row">
 							<div class="col text-center">
-								<h3 class="text-7 text-transform-none font-weight-semibold mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Trusted by great companies like</h3>
+								<h3 class="text-7 text-transform-none font-weight-semibold mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Organizações atendidas por nosso escritório</h3>
 							</div>
 						</div>
 					</div>
@@ -778,8 +778,8 @@
 							<div class="row py-5 my-3">
 								<div class="col text-center pt-5">
 
-									<h3 class="text-9 text-xl-11 line-height-3 text-transform-none font-weight-semibold mb-4 mb-lg-3 mb-xl-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Loved by people
-										<a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." tabindex="0">
+									<h3 class="text-9 text-xl-11 line-height-3 text-transform-none font-weight-semibold mb-4 mb-lg-3 mb-xl-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Excelência reconhecida
+										<a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Compromisso com resultados de alta qualidade" tabindex="0">
 											<span class="d-inline-block mx-2 custom-avatar-1">
 												<img src="img/avatars/avatar.jpg" class="rounded-circle img-fluid" alt="">
 												<span class="custom-avatar-1-info d-none d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
@@ -787,16 +787,16 @@
 														<img width="30" src="img/demos/creative-agency-2/svg/arrow-thin.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': ''}" /> hover/click me </span>
 												</span>
 											</span>
-										</a>check out how we help <br>
-										<a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." tabindex="0">
+										</a>transformando negócios <br>
+										<a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Inovação e estratégia para o seu sucesso" tabindex="0">
 											<span class="d-inline-block mx-2 custom-avatar-1">
 												<img src="img/avatars/avatar-2.jpg" class="rounded-circle img-fluid" alt="">
 											</span>
-										</a>customers across the <a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." tabindex="0">
+										</a> conectando pessoas e resultados <a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Atuação em todo o território nacional" tabindex="0">
 											<span class="d-inline-block mx-2 custom-avatar-1">
 												<img src="img/avatars/avatar-3.jpg" class="rounded-circle img-fluid" alt="">
 											</span>
-										</a>globe.
+										</a>nacionalmente.
 									</h3>
 
 								</div>
