--- a/demo-creative-agency-2.html
+++ b/demo-creative-agency-2.html
@@ -483,8 +483,8 @@
 								<div>
 								<div>
 									<div class="col-12">
-										<div class="button-centered call-to-action">
-											<a href="#" target="_blank" class="btn appear-animation call-to-action-btn w-50 btn-xl btn-primary mb-2" style="color: white;" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="450">Mais opções</a>
+										<div class="button-centered call-to-action" style="padding-bottom: 0px;">
+											<a href="demo-creative-agency-2-services.html" target="_blank" class="btn appear-animation call-to-action-btn w-50 btn-xl btn-primary mb-2" style="color: white;padding-top: 20px;padding-bottom: 20px;margin-top: 10px;" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="450">Mais opções</a>
 										</div>
 									</div>
 								</div>
@@ -573,7 +573,7 @@
 					<div class="container py-1">
 						<div class="row pt-5 mt-3">
 							<div class="col text-center">
-								<h3 class="text-7 text-transform-none font-weight-semibold my-4 pt-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Trusted by great companies like</h3>
+								<h3 class="text-7 text-transform-none font-weight-semibold my-4 pt-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Organizações atendidas por nosso escritório</h3>
 							</div>
 						</div>
 					</div>
@@ -607,25 +607,25 @@
 							<div class="row py-5 my-3">
 								<div class="col text-center pt-5">
 
-									<h3 class="text-9 text-xl-11 line-height-3 text-transform-none font-weight-semibold mb-4 mb-lg-3 mb-xl-4 appear-animation text-primary--300" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Loved by people
-										<a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." tabindex="0">
+									<h3 class="text-9 text-xl-11 line-height-3 text-transform-none font-weight-semibold mb-4 mb-lg-3 mb-xl-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Excelência reconhecida
+										<a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Compromisso com resultados de alta qualidade" tabindex="0">
 											<span class="d-inline-block mx-2 custom-avatar-1">
 												<img src="img/avatars/avatar.jpg" class="rounded-circle img-fluid" alt="">
 												<span class="custom-avatar-1-info d-none d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
 													<span class="opacity-5">
-														<img width="30" src="img/demos/creative-agency-2/svg/arrow-thin.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': ''}" /> Click Aqui </span>
+														<img width="30" src="img/demos/creative-agency-2/svg/arrow-thin.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': ''}" /> hover/click me </span>
 												</span>
 											</span>
-										</a>check out how we help <br>
-										<a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." tabindex="0">
+										</a>transformando negócios <br>
+										<a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Inovação e estratégia para o seu sucesso" tabindex="0">
 											<span class="d-inline-block mx-2 custom-avatar-1">
 												<img src="img/avatars/avatar-2.jpg" class="rounded-circle img-fluid" alt="">
 											</span>
-										</a>customers across the <a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." tabindex="0">
+										</a> conectando pessoas e resultados <a data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-custom-class="custom-popover-1" data-bs-placement="top" data-bs-content="Atuação em todo o território nacional" tabindex="0">
 											<span class="d-inline-block mx-2 custom-avatar-1">
 												<img src="img/avatars/avatar-3.jpg" class="rounded-circle img-fluid" alt="">
 											</span>
-										</a>globe.
+										</a>nacionalmente.
 									</h3>
 
 								</div>
@@ -635,43 +635,57 @@
 
 									<div class="row border-top">
 										<div class="col-lg-2 order-3 order-lg-0 py-4 border-end ps-0 pe-0 pe-lg-4 m-0 text-start">
-											<a href="#" class="btn btn-modern btn-primary text-light w-100 font-weight-semibold text-capitalize text-3 py-3 anim-hover-translate-top-5px transition-2ms mb-5 mb-lg-0"><span class="px-4 d-block ws-nowrap">View Online <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></span></a>
+											<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/os-desafios-da-propriedade-intelectual-no-ambiente-metaverso/" target="_blank" class="btn btn-modern btn-primary text-light w-100 font-weight-semibold text-capitalize text-3 py-3 anim-hover-translate-top-5px transition-2ms mb-5 mb-lg-0"><span class="px-4 d-block ws-nowrap">Matéria Completa <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></span></a>
 										</div>
 										<div class="col-lg-6 py-4 border-end px-0 px-lg-4 m-0 text-start">
-											<h3 class="text-8 text-transform-none font-weight-semibold mb-4 mt-5 mt-lg-3 pt-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Okler Themes</h3>
-											<p class="text-4-5 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500">Cras a elit sit amet leo accumsan volutpat. Suspendisse hendreriast ehicula leo, vel efficitur felis ultrices non. Cras a elit sit amet leo acun volutpat. Suspendisse hendrerit. </p>
+											<h3 class="text-7 line-height-2 text-transform-none font-weight-semibold mb-4 mt-5 mt-lg-3 pt-0 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 5}">Desafios da Propriedade Intelectual no Metaverso</h3>
+											<p class="text-3-4 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-3 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 0.8}">O artigo discute os novos desafios que surgem no ambiente do metaverso, especialmente no que tange à proteção da propriedade intelectual. A autora examina como as leis tradicionais se aplicam a essa realidade digital emergente e propõe reflexões sobre a adaptação das normas jurídicas para garantir a segurança de ativos digitais, como marcas e direitos autorais, nesse novo cenário virtual.</p>
+
+											<p class="text-3-4 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-1 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 24}">
+												<strong>Autora:</strong>
+												Milene Correia, sócia do escritório Correia & Vieira de Carvalho.</p>
 										</div>
 										<div class="col-lg-4 p-0 ps-lg-4">
-											<a href="#">
-												<img src="img/demos/creative-agency-2/projects/project-1.jpg" loading="lazy" class="img-fluid my-lg-4" alt="">
-											</a>
-										</div>
-									</div>
-									<div class="row border-top">
-										<div class="col-lg-2 order-3 order-lg-0 py-4 border-end ps-0 pe-0 pe-lg-4 m-0 text-start">
-											<a href="#" class="btn btn-modern btn-primary text-light w-100 font-weight-semibold text-capitalize text-3 py-3 anim-hover-translate-top-5px transition-2ms mb-5 mb-lg-0"><span class="px-4 d-block ws-nowrap">View Online <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></span></a>
-										</div>
-										<div class="col-lg-6 py-4 border-end px-0 px-lg-4 m-0 text-start">
-											<h3 class="text-8 text-transform-none font-weight-semibold mb-4 mt-5 mt-lg-3 pt-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Envato</h3>
-											<p class="text-4-5 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500">Cras a elit sit amet leo accumsan volutpat. Suspendisse hendreriast ehicula leo, vel efficitur felis ultrices non. Cras a elit siel efficitur fel. </p>
-										</div>
-										<div class="col-lg-4 p-0 ps-lg-4">
-											<a href="#">
+											<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/os-desafios-da-propriedade-intelectual-no-ambiente-metaverso/" target="_blank">
 												<img src="img/demos/creative-agency-2/projects/project-2.jpg" loading="lazy" class="img-fluid my-lg-4" alt="">
 											</a>
 										</div>
 									</div>
 									<div class="row border-top border-bottom">
 										<div class="col-lg-2 order-3 order-lg-0 py-4 border-end ps-0 pe-0 pe-lg-4 m-0 text-start">
-											<a href="#" class="btn btn-modern btn-primary text-light w-100 font-weight-semibold text-capitalize text-3 py-3 anim-hover-translate-top-5px transition-2ms mb-5 mb-lg-0"><span class="px-4 d-block ws-nowrap">View Online <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></span></a>
+											<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/a-ilimitacao-de-uso-da-bandeira-nacional/" target="_blank" class="btn btn-modern btn-primary text-light w-100 font-weight-semibold text-capitalize text-3 py-3 anim-hover-translate-top-5px transition-2ms mb-5 mb-lg-0"><span class="px-4 d-block ws-nowrap">Matéria Completa <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></span></a>
 										</div>
 										<div class="col-lg-6 py-4 border-end px-0 px-lg-4 m-0 text-start">
-											<h3 class="text-8 text-transform-none font-weight-semibold mb-4 mt-5 mt-lg-3 pt-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Porto Template</h3>
-											<p class="text-4-5 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500">Cras a elit sit amet leo accumsan volutpat. Suspendisse hendreriast ehicula leo, vel efficitur felis ultrices non. Cras a elit sit amet leo acun volutpehicula leo, vel efficitur fel. </p>
+											<h3 class="text-7 line-height-2 text-transform-none font-weight-semibold mb-4 mt-5 mt-lg-3 pt-0 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 5}">A (i)Limitação de Uso da Bandeira Nacional</h3>
+											<p class="text-3-4 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-3 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 0.8}">A autora analisa as restrições legais relacionadas ao uso da bandeira nacional no Brasil, destacando as normas que buscam proteger o respeito e a dignidade do símbolo pátrio. Ela explora a legislação vigente e os casos em que o uso indevido da bandeira pode resultar em sanções, enfatizando a importância de preservar o significado e o valor da bandeira como um símbolo nacional. O texto também discute a responsabilidade das empresas e cidadãos ao utilizarem a bandeira em contextos públicos e comerciais.</p>
+
+											<p class="text-3-4 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-1 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 24}">
+												<strong>Autora:</strong>
+												Milene Correia, sócia do escritório Correia & Vieira de Carvalho.</p>
 										</div>
 										<div class="col-lg-4 p-0 ps-lg-4">
-											<a href="#">
+											<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/a-ilimitacao-de-uso-da-bandeira-nacional/" target="_blank">
 												<img src="img/demos/creative-agency-2/projects/project-3.jpg" loading="lazy" class="img-fluid my-lg-4" alt="">
+											</a>
+										</div>
+									</div>
+									<div class="row border-top">
+										<div class="col-lg-2 order-3 order-lg-0 py-4 border-end ps-0 pe-0 pe-lg-4 m-0 text-start">
+											<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/a-importancia-do-registro-de-marca-e-o-seu-reconhecimento-como-patrimonio-empresarial/?srsltid=AfmBOoqw0l6PC8PtnKCKkRO5_ryZx0ya6R37n8X9YW7rgqhwWSZK4_2p" target="_blank" class="btn btn-modern btn-primary text-light w-100 font-weight-semibold text-capitalize text-3 py-3 anim-hover-translate-top-5px transition-2ms mb-5 mb-lg-0"><span class="px-4 d-block ws-nowrap">Matéria Completa <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></span></a>
+										</div>
+										<div class="col-lg-6 py-4 border-end px-0 px-lg-4 m-0 text-start">
+											<h3 class="text-7 line-height-2 text-transform-none font-weight-semibold mb-4 mt-5 mt-lg-3 pt-0 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 5}">A importância do registro de marca e o seu reconhecimento como patrimônio empresarial</h3>
+											<p class="text-3-4 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-3 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 0.8}">A autora explora a relevância do registro de marca para empresas, destacando como esse processo é crucial para garantir direitos exclusivos e proteger a identidade de um negócio. O artigo aborda também a importância do reconhecimento da marca como um patrimônio valioso, refletindo o investimento estratégico das empresas na construção de sua imagem e reputação no mercado.
+
+											</p>
+
+											<p class="text-3-4 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-1 appear-animation" data-appear-animation="fadeInUpShorter" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 24}">
+												<strong>Autora:</strong>
+												Milene Correia, sócia do escritório Correia & Vieira de Carvalho.</p>
+										</div>
+										<div class="col-lg-4 p-0 ps-lg-4">
+											<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/a-importancia-do-registro-de-marca-e-o-seu-reconhecimento-como-patrimonio-empresarial/?srsltid=AfmBOoqw0l6PC8PtnKCKkRO5_ryZx0ya6R37n8X9YW7rgqhwWSZK4_2p" target="_blank">
+												<img src="img/demos/creative-agency-2/projects/project-1.jpg" loading="lazy" class="img-fluid my-lg-4" alt="">
 											</a>
 										</div>
 									</div>
