--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -57,7 +57,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-creative-agency-2.html">
+										<a href="index.html">
 											<img alt="Porto" height="40" src="img/demos/creative-agency-2/logo.svg">
 										</a>
 									</div>
@@ -70,7 +70,7 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link" href="demo-creative-agency-2.html">Home</a>
+														<a class="nav-link" href="index.html">Home</a>
 													</li>
 													<li>
 														<a class="nav-link" href="demo-creative-agency-2-about-us.html">Sobre nós</a>
@@ -811,7 +811,7 @@
 				<div class="container pt-5 pb-3">
 					<div class="row py-5">
 						<div class="col-lg-6 mt-5 pt-3">
-							<a href="demo-creative-agency-2.html" class="text-decoration-none">
+							<a href="index.html" class="text-decoration-none">
 								<img src="img/demos/creative-agency-2/logo-light.png" width="123" height="32" class="img-fluid mb-5" alt="Porto" />
 							</a>
 							<ul class="list list-unstyled">
