--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -70,7 +70,8 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link" href="index.html">Home</a>
+														<a class="nav-link" href="index
+														.html">Home</a>
 													</li>
 													<li>
 														<a class="nav-link" href="demo-creative-agency-2-about-us.html">Sobre nós</a>
