--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 
 											</p>
 
-											<p class="text-3-4 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-1 appear-animation" data-appear-animation="fadeInUpShorter" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 24}">
+											<p class="text-3-4 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-1 appear-animation" data-plugin-animated-letters data-plugin-options="{'startDelay': 500, 'minWindowWidth': 0, 'animationName': 'typeWriter', 'animationSpeed': 24}">
 												<strong>Autora:</strong>
 												Milene Correia, sócia do escritório Correia & Vieira de Carvalho.</p>
 										</div>
