--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -631,6 +631,60 @@
 					</div>
 				</div>
 
+				<div class="modal fade" id="largeModal19" tabindex="-1" role="dialog" aria-labelledby="largeModalLabe" aria-hidden="true">
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title" id="largeModalLabel">Cível</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+							</div>
+							<div class="modal-body">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus.</p>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-light" data-bs-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="modal fade" id="largeModal20" tabindex="-1" role="dialog" aria-labelledby="largeModalLabe" aria-hidden="true">
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title" id="largeModalLabel">Direito Público</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+							</div>
+							<div class="modal-body">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus.</p>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-light" data-bs-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="modal fade" id="largeModal21" tabindex="-1" role="dialog" aria-labelledby="largeModalLabe" aria-hidden="true">
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title" id="largeModalLabel">Regulatório e Sanitário</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+							</div>
+							<div class="modal-body">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus.</p>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-light" data-bs-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
 
                 <div class="custom-page-content p-relative z-index-2">
                     <div class="container custom-padding-top-1 custom-padding-bottom-1 px-lg-5 bg-light">
@@ -813,7 +867,7 @@
 															<div class="overflow-hidden">
 																<a data-bs-toggle="modal" data-bs-target="#largeModal9" class="stretched-link text-decoration-none">
 																	<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200"
-																	data-appear-animation="maskUp" data-appear-animation-delay="50">Direito Médico e da Saúde</h3>
+																	data-appear-animation="maskUp" data-appear-animation-delay="50">Direito Médico<br> e da Saúde</h3>
 																</a>
 															</div>
 														</div>										
@@ -832,7 +886,7 @@
 															</div>
 															<div class="overflow-hidden">
 																<a data-bs-toggle="modal" data-bs-target="#largeModal10" class="stretched-link text-decoration-none">
-																	<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200" data-appear-animation="maskUp" data-appear-animation-delay="150">Recuperação de Crédito Educacional</h3>
+																	<h3 class="font-weight-semi-bold text-capitalize text-6 line-height-2 mb-0 appear-animation text-tertiary--200" data-appear-animation="maskUp" data-appear-animation-delay="150">Recuperação de<br> Crédito Educacional</h3>
 																</a>
 															</div>
 														</div>										
