--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -288,7 +288,7 @@
 				        <div class="row align-items-center my-5 pt-5 pb-4">
 				            <div class="col text-center my-5 pb-5">
 				                <div class="py-4">
-				                    <h1 class="text-color-light font-weight-bold text-10">Sobre nós</h1>
+				                    <h1 class="text-color-light font-weight-bold text-10 appear-animation" data-appear-animation="textEntrance" data-appear-animation-delay="0" data-appear-animation-duration="1s">Sobre nós</h1>
 				                </div>
 				            </div>
 				        </div>
