--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -288,7 +288,7 @@
 				        <div class="row align-items-center my-5 pt-5 pb-4">
 				            <div class="col text-center my-5 pb-5">
 				                <div class="py-4">
-				                    <h1 class="text-color-light font-weight-bold text-10 appear-animation" data-appear-animation="textEntrance" data-appear-animation-delay="0" data-appear-animation-duration="1s">Sobre nós</h1>
+				                    <h1 class="text-color-light font-weight-bold text-10">Sobre nós</h1>
 				                </div>
 				            </div>
 				        </div>
@@ -347,70 +347,46 @@
 								</div>
 
                                 <div class="d-block appear-animation pt-4" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
-									<a href="#" class="btn btn-modern btn-primary text-capitalize text-dark text-3 px-2 py-1 anim-hover-translate-top-5px transition-2ms">Let's Talk <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></a>
+									<a href="#" class="btn btn-modern btn-primary text-capitalize text-light text-3 px-2 py-1 anim-hover-translate-top-5px transition-2ms">Contate-nos <i class="fas fa-arrow-right rotate-l-45 ms-2"></i></a>
 								</div>
 
                             </div>
                         </div>
 
-                        <div class="row px-lg-3 py-5">
-							<div class="col">
-								<p class="text-4 line-height-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum eleifend eros a pharetra. Cras aliquam vestibulum vehicula. Sed sed lectus risus. Vestibulum maximus ac purus in euismod. In venenatis tellus ante, id porta risus semper quis. Aenean vel posuere urna, sit amet placerat massa. Quisque efficitur interdum libero, sed dictum lorem euismod sed.</p>
-							</div>
-                        </div>
-
                         <div class="row px-lg-3">
-
-                            <div class="col-md-6 col-lg-4 mb-4">
-                                <div class="card border-0 border-radius-0 bg-color-dark">
-                                    <div class="card-body">
-                                        <h4 class="card-title mb-1 custom-font-size-1 font-weight-semi-bold text-light">345+</h4>
-                                        <p class="text-4-5 line-height-7 text-light pb-0 mt-5 mb-0">Cras a elit sit amet leo accumsan volutpat.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-4 mb-4">
-                                <div class="card border-0 border-radius-0 bg-color-dark">
-                                    <div class="card-body">
-                                        <h4 class="card-title mb-1 custom-font-size-1 font-weight-semi-bold text-light">1000+</h4>
-                                        <p class="text-4-5 line-height-7 text-light pb-0 mt-5 mb-0">A crasa elit sit amet leo accumsan volutpat.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-4 mb-4">
-                                <div class="card border-0 border-radius-0 bg-color-dark">
-                                    <div class="card-body">
-                                        <h4 class="card-title mb-1 custom-font-size-1 font-weight-semi-bold text-light">123+</h4>
-                                        <p class="text-4-5 line-height-7 text-light pb-0 mt-5 mb-0">Elit cras a elit sit amet leo accumsan volutpat.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-4 mb-4">
-                                <div class="card border-0 border-radius-0 bg-color-dark">
-                                    <div class="card-body">
-                                        <h4 class="card-title mb-1 custom-font-size-1 font-weight-semi-bold text-light">15+</h4>
-                                        <p class="text-4-5 line-height-7 text-light pb-0 mt-5 mb-0">Sit cras a elit sit amet leo accumsan volutpat.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-4 mb-4">
-                                <div class="card border-0 border-radius-0 bg-color-dark">
-                                    <div class="card-body">
-                                        <h4 class="card-title mb-1 custom-font-size-1 font-weight-semi-bold text-light">45+</h4>
-                                        <p class="text-4-5 line-height-7 text-light pb-0 mt-5 mb-0">Lorem a elit sit amet leo accumsan volutpat.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-4 mb-4">
-                                <div class="card border-0 border-radius-0 bg-color-dark">
-                                    <div class="card-body">
-                                        <h4 class="card-title mb-1 custom-font-size-1 font-weight-semi-bold text-light">345+</h4>
-                                        <p class="text-4-5 line-height-7 text-light pb-0 mt-5 mb-0">Cras a elit sit amet leo accumsan volutpat.</p>
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
+
+						<div class="container py-1">
+							<div class="row custom-padding-top-1">
+								<div class="col text-center">
+									<h3 class="text-7 text-transform-none font-weight-semibold mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Organizações atendidas por nosso escritório</h3>
+								</div>
+							</div>
+						</div>
+						<div class="appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="350">
+							<div class="marquee custom-marquee-1 pt-4 d-flex" data-duration="40000" data-gap="10" data-duplicated="true" data-startVisible="true">
+								<span class="d-flex align-items-center" data-clone-element="2">
+									<div class="px-5 py-1">
+										<img src="img/logos/logo-8.png" alt="" class="img-fluid" style="max-width: 90px;">
+									</div>
+									<div class="px-5 py-1">
+										<img src="img/logos/logo-9.png" alt="" class="img-fluid" style="max-width: 140px;">
+									</div>
+									<div class="px-5 py-1">
+										<img src="img/logos/logo-10.png" alt="" class="img-fluid" style="max-width: 140px;">
+									</div>
+									<div class="px-5 py-1">
+										<img src="img/logos/logo-11.png" alt="" class="img-fluid" style="max-width: 140px;">
+									</div>
+									<div class="px-5 py-1">
+										<img src="img/logos/logo-12.png" alt="" class="img-fluid" style="max-width: 100px;">
+									</div>
+									<div class="px-5 py-1">
+										<img src="img/logos/logo-13.png" alt="" class="img-fluid" style="max-width: 100px;">
+									</div>
+								</span>
+							</div>
+						</div>
 
                     </div>
 				</div>
