--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 												</ul>
 											</nav>
 										</div>
-										<a class="btn btn-primary font-weight-semibold text-3 py-lg-3 text-light anim-hover-translate-top-5px transition-2ms ms-4" href="demo-creative-agency-2-contact-us.html" target="_blank"><span class="px-lg-4 d-block ws-nowrap">Contate-nos</span></a>
+										<a class="btn btn-primary font-weight-semibold text-3 py-lg-3 text-light anim-hover-translate-top-5px transition-2ms ms-4" href="demo-creative-agency-2-contact-us.html"><span class="px-lg-4 d-block ws-nowrap">Contate-nos</span></a>
 										<button class="btn header-btn-collapse-nav text-dark" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
 											<i class="fas fa-bars"></i>
 										</button>
@@ -800,7 +800,7 @@
 								<div class="col-lg-7 text-center">
 
 									<div class="d-block appear-animation pt-4" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
-										<a href="#" class="btn btn-modern btn-secondary text-light text-4 text-capitalize custom-btn-1 py-1 anim-hover-translate-top-5px transition-2ms">Contate-nos <i class="fas fa-arrow-right rotate-l-45 ms-2 p-relative bottom-12 right-7"></i></a>
+										<a href="demo-creative-agency-2-contact-us.html" class="btn btn-modern btn-secondary text-light text-4 text-capitalize custom-btn-1 py-1 anim-hover-translate-top-5px transition-2ms">Contate-nos <i class="fas fa-arrow-right rotate-l-45 ms-2 p-relative bottom-12 right-7"></i></a>
 									</div>
 
 								</div>
