--- a/demo-creative-agency-2-contact-us.html
+++ b/demo-creative-agency-2-contact-us.html
@@ -57,7 +57,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-creative-agency-2.html">
+										<a href="index.html">
 											<img alt="Porto" height="40" src="img/demos/creative-agency-2/logo.svg">
 										</a>
 									</div>
